<resources>
    <string name="msg">Please grant the permission.</string>

    <string name="app_name">Mobisheba</string>
    <string name="title_home">Home</string>
    <string name="title_stores">Stores</string>
    <string name="title_qrcode">Scan QR code</string>
    <string name="title_events">Events</string>
    <string name="title_more">More</string>

    <!--- SIGN UP STRINGS -->
    <string name="register">REGISTER</string>
    <string name="your_fullname">Your Full Name</string>
    <string name="company_name">Company Name</string>
    <string name="your_mobile">Your Mobile No</string>
    <string name="your_nid">Your NID No</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Password</string>
    <string name="passdetails">Password at least 8 characters with a-z, A-Z, 0-9 and special chaacters</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_acc">Already have an account\?</string>
    <string name="login_activity">Login</string>

    <!--- SIGN IN STRINGS -->
    <string name="get_started">GET STARTED</string>
    <string name="mobile">Your Mobile No.</string>
    <string name="password">Your password</string>
    <string name="forgotpassword">Forgot your password\?</string>
    <string name="Login">LOGIN</string>
    <string name="newtomobisheba">New to Mobisheba?</string>
    <string name="registernow">Register Now</string>
    <string name="orsigninwith">OR SIGN IN WITH</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <string name="verification">VERIFY</string>

    <string name="recharge">Recharge</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="events">Events</string>
    <string name="offers">Offers</string>
    <string name="transactions">Transactions</string>
    <string name="points">Points</string>


    <!-- RECHARGE -->
    <string name="your_phone">Your Phone</string>
    <string name="your_recharge_amount">Recharge Amount</string>
    <string name="pre_paid">Prepaid</string>
    <string name="post_paid">Postpaid</string>
    <string name="top_up">TopUp</string>
    <string name="balance">Balance</string>
    <string name="currency">TK</string>
    <string name="amount">0.00</string>
    <string name="reload">Reload</string>

    <string name="action_settings">Settings</string>
    <string name="single_permission_text">(Click on FAB to check Single permission.\nTo test again, change the app permission in settings or reinstall the app)</string>


    <!-- TEST TEST -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Topup</string>
    <string name="slide_1_desc">The easiest way to recharge your phone.</string>

    <string name="slide_2_title">Bill Payment</string>
    <string name="slide_2_desc">Now you will be able to pay bills with your phone!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">Transactions</string>
    <string name="slide_4_desc">Now you can use your phone for transaction as well!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- ACCOUNT TYPES SCREEN -->
    <string name="select_acc">SELECT YOUR ACCOUNT TYPE</string>
    <string name="personal_acc">Personal Account</string>
    <string name="create_per_acc">Create personal account and enjoy our exclusive services.</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="digital_enterprise">Digital Enterprise</string>
    <string name="create_digent_acc">Create digital enterprise account and enjoy our exclusive services.</string>
    <string name="lets_go_dig">Let\'s Go</string>
    <string name="already_acc_ats">Already have an account?</string>
    <string name="login_ats">Login</string>

</resources>
