<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_stores" />

    <item
        android:id="@+id/navigation_qrcode"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_qrcode" />
    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_events" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_more" />

</menu>
