<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/select_acc"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignStart="@+id/textView6"
            android:layout_alignTop="@+id/textView"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/personaluse" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="147dp"
            android:fontFamily="sans-serif"
            android:text="@string/personal_acc"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/create_per_acc"
            android:textSize="15dp" />

        <Button
            android:id="@+id/persona_Bttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/full_circle_red"
            android:text="@string/lets_go"
            android:textColor="@color/red"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            app:srcCompat="@drawable/digital_enterprise" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_alignStart="@+id/textView6"
            android:fontFamily="sans-serif"
            android:text="@string/digital_enterprise"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/create_digent_acc"
            android:textSize="15dp" />

        <Button
            android:id="@+id/digital_enterpriseBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/full_circle_red"
            android:gravity="center"
            android:text="@string/lets_go_dig"
            android:textColor="@color/red"
            android:textSize="13dp" />

    </RelativeLayout>

</ScrollView>
